feat(app): Make api gateway respond with text plain
