# state-service/src/main/java/fi/tuni/compse140/project/api/endpoint/StateControllerImpl.java
@@ -60,4 +60,9 @@ public class StateControllerImpl implements StateController {
         facade.shutdown();
         return ResponseEntity.noContent().build();
     }
+
+    @Override
+    public ResponseEntity<String> getRequest() {
+        return ResponseEntity.ok(facade.getRequest());
+    }
 }
